# hocon

./: .pylintrc  CHANGELOG.md  FEATURES.md  LICENSE  README.md  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  publish.yml  publish_test.yml  python-publish.yml
src/: __init__.py  _parser.py  _quoted_string.py  _simple_value.py
src/hocon/: __init__.py  __version__.py  _eat.py  _key.py  _main.py  _parser.py  _simple_value.py  _value_utils.py  constants.py  exceptions.py  strings.py  unresolved.py
src/hocon/parser/: __init__.py  _data.py  _eat.py  _include.py  _key.py  _parser.py  _quoted_string.py  _simple_value.py  _unquoted_string.py  _value_utils.py  data.py
src/hocon/resolver/: __init__.py  _fallback.py  _lazy_resolver.py  _lazy_resolver.pyi  _preresolver.py  _resolver.py  _resolver.pyi  _self_reference.py  _simple_value.py  _substitution.py  _substitution_resolver.py  _utils.py
tests/: test_changelog.py  test_hypo.py  test_loads.py  test_merge.py  test_parse_values.py  test_performance.py  utils.py
tests/acceptance/: test_concatenations.py  test_env.py  test_loads.py  test_object_merging.py  test_print.py  test_pyhocon.py  test_repr.py  test_substitutions.py
tests/acceptance/data/: pyhocon_readme1.conf  pyhocon_readme2.conf
tests/acceptance/includes/: test_includes.py
tests/acceptance/includes/data/: 1.conf  2.conf  main.conf
tests/e2e/commas/: test_basic.py  test_spec_examples_dict.py  test_spec_examples_list.py
tests/e2e/comments/: test_inside.py  test_outside.py
tests/e2e/comments/data/: after.hocon  after2.hocon  before.hocon  inside_dict.hocon  inside_list.hocon
tests/e2e/config_object_merging_and_file_merging/: test_positive.py
tests/e2e/duplicate_keys_and_object_merging/: test_keys.py  test_object_merging.py
tests/e2e/includes/: test_positive.py
tests/e2e/includes/data/bad_value/: application.conf
tests/e2e/includes/merging/: test_positive.py
tests/e2e/includes/merging/data/merge_overriden/: application.conf  foo.conf
tests/e2e/includes/semantics/merging/: test_negative.py  test_positive.py
tests/e2e/includes/semantics/merging/data/array/: application.conf
tests/e2e/includes/semantics/merging/data/merge_override/: application.conf
tests/e2e/includes/semantics/missing_files_and_required_files/: test_negative.py  test_positive.py
tests/e2e/includes/semantics/missing_files_and_required_files/data/: classpath.conf  file.conf  file_no_closing.conf  file_no_opening.conf  ialsoexist.conf  iexist.conf  missing.conf  required.conf  required_missing.conf  required_no_closing.conf  required_no_opening.conf
tests/e2e/includes/semantics/substitution/: test_substitution.py
tests/e2e/includes/semantics/substitution/data/: foo.conf  root2.conf
tests/e2e/includes/syntax/: test_negative.py  test_positive.py
tests/e2e/includes/syntax/data/bad_value/: sub.conf  unquoted.conf
tests/e2e/includes/syntax/data/basic/: application.conf
tests/e2e/includes/syntax/data/lots_of_space/: application.conf
tests/e2e/key_value_sep/: test_k_v_separator.py  test_negative.py
tests/e2e/multiline_strings/: test_triple_quotes.py
tests/e2e/multiline_strings/data/: escapes.hocon  multiquotes.hocon  triplequotes_everywhere.hocon  unicode.hocon
tests/e2e/omit_root_braces/: test_negative.py  test_omit.py
tests/e2e/path_expressions/: test_negative.py  test_positive.py
tests/e2e/paths_as_keys/: test_negative.py  test_positive.py
tests/e2e/substitution_fallback_to_environment_variables/: test_env.py
tests/e2e/substitutions/: test_basic.py  test_negative.py  test_optional.py
tests/e2e/substitutions/data/: main.conf  more.conf
tests/e2e/substitutions/examples/: test_negative.py  test_positive.py
tests/e2e/substitutions/plus_equal_field_separator/: test_negative.py  test_positive.py
tests/e2e/substitutions/self_referential/: test_negative.py  test_positive.py
tests/e2e/unchanged_from_json/: test_json.py  test_numbers.py
tests/e2e/unchanged_from_json/data/: empty.json  nested.json  special_chars.json
tests/e2e/unquoted_strings/: test_concatenated_with_other_types.py  test_forbidden_only.py  test_other_simple_types.py  test_str_with_forbidden.py
tests/e2e/value_concatenation/: test_basic.py  test_negative.py
tests/e2e/value_concatenation/array_and_object/: test_negative.py  test_positive.py
tests/e2e/value_concatenation/arrays_without_commas_or_newlines/: test_arrays.py
tests/e2e/value_concatenation/string/: test_negative.py  test_rendering.py
tests/e2e/value_concatenation/string_/: test_negative.py  test_rendering.py
tests/e2e/value_concatenation/with_whitespace_and_substitutions/: test_negative.py  test_positive.py
tests/e2e/whitespace/: test_whitespace.py
tests/sandbox/: test_loads.py  test_merge.py  test_parse_values.py  test_substitutions.py
tests/unchanged_from_json/: test_float.py  test_json.py
tests/unchanged_from_json/data/: special_chars.json
tests/ut/: test_parse_keypath.py  test_parse_values.py  test_unresolved.py
tests/ut/parser/: test_key.py  test_parser.py  test_simple_value.py
tests/ut/resolver/: test_fallback.py  test_lazy_resolver.py  test_merge.py  test_preresolver.py  test_resolver.py  test_simple_value.py  test_substitution_resolver.py
