[build-system]
requires = ['hatchling', 'hatch-fancy-pypi-readme>=22.5.0']
build-backend = 'hatchling.build'

[project]

name = "hocon"
authors = [
    { name = "Michał Szajkowski", email = "myjniak@gmail.com"}
]
description = "HOCON parser for python"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: File Formats",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["readme", "version"]

dependencies = []
requires-python = ">= 3.10"

[project.urls]
Homepage = 'https://github.com/myjniak/hocon'
Source = 'https://github.com/myjniak/hocon'
Changelog = 'https://github.com/myjniak/hocon/blob/main/CHANGELOG.md'

[tool.hatch.version]
path = "src/hocon/__version__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src/hocon",
    "/CHANGELOG.md",
    "/README.md",
    "/tests",
]

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = 'text/markdown'
fragments = [
    {path = "README.md"},
    {path = "CHANGELOG.md"},
]


[tool.setuptools.packages.find]
where = ["src"]
include = ["hocon*"]

[tool.hatch.envs.test]
dependencies = [
    "pytest",
    "pytest-timeout",
    "pytest-cov",
    "black",
    "mypy"
]

[tool.hatch.envs.test.scripts]
coverage = "python -m pytest -vs --cov hocon --junitxml=junit/test-results.xml-{env:PYTHON_VERSION}.xml"

[tool.black]
line-length = 120