[build-system]
requires = ['hatchling', 'hatch-fancy-pypi-readme>=22.5.0']
build-backend = 'hatchling.build'

[project]

name = "hocon2"
authors = [
    { name = "Michał Szajkowski", email = "myjniak@gmail.com"}
]
description = "HOCON parser for python"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: File Formats",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dynamic = ["readme", "version"]

dependencies = []
requires-python = ">= 3.11"

[project.urls]
Homepage = 'https://github.com/myjniak/hocon'
Source = 'https://github.com/myjniak/hocon'
Changelog = 'https://github.com/myjniak/hocon/blob/main/CHANGELOG.md'

[tool.hatch.version]
path = "src/hocon/__version__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src/hocon",
    "/CHANGELOG.md",
    "/README.md",
    "/tests",
]

[tool.hatch.build.targets.wheel]
packages = [
    "/src/hocon"
]

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = 'text/markdown'
fragments = [
    {path = "README.md"},
]

[tool.hatch.envs.test]
dependencies = [
    "pylint",
    "pytest",
    "pytest-timeout",
    "pytest-cov",
    "black",
    "mypy",
    "ruff",
    "typeguard"
]

[tool.hatch.envs.test.scripts]
run_tests_with_dynamic_typechecks = 'coverage run -m pytest --typeguard-packages=hocon -m "not passing_unsupported_type"'
run_tests_violating_typehints = 'coverage run -a -m pytest -m "passing_unsupported_type"'

test = [
    'run_tests_with_dynamic_typechecks',
    'run_tests_violating_typehints',
    'coverage report -m --fail-under 100',
    'coverage xml -o junit/test-results.xml-{env:PYTHON_VERSION:3.13}.xml',
]

black = "python -m black --check src/"
mypy = "python -m mypy --strict -p hocon"
pylint = "python -m pylint src"
ruff = "python -m ruff check src"

[tool.black]
line-length = 120